# qtpositioning

./: .gitignore  .qmake.conf  CMakeLists.txt  conanfile.py  dependencies.yaml
cmake/: FindGconf.cmake  FindGypsy.cmake
coin/: module_config.yaml
config.tests/gypsy/: CMakeLists.txt  main.cpp
config.tests/winrt/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/positioning/: CMakeLists.txt
examples/positioning/geoflickr/: CMakeLists.txt  flickr-90.qml  flickr.qml  geoflickr.pro  qmllocationflickr.cpp
examples/positioning/geoflickr/doc/src/: geoflickr.qdoc
examples/positioning/geoflickr/flickrcommon/: Progress.qml  RestModel.qml  ScrollBar.qml  Slider.qml
examples/positioning/geoflickr/flickrmobile/: Button.qml  GeoTab.qml  GridDelegate.qml  ImageDetails.qml  ListDelegate.qml  TitleBar.qml  ToolBar.qml
examples/positioning/logfilepositionsource/: CMakeLists.txt  clientapplication.cpp  clientapplication.h  logfilepositionsource.cpp  logfilepositionsource.h
examples/positioning/logfilepositionsource/doc/src/: logfilepositionsource.qdoc
examples/positioning/satelliteinfo/: ApplicationScreen.qml  Button.qml  CMakeLists.txt  Header.qml  HelpPopup.qml  Main.qml  PageButton.qml  PermissionsScreen.qml  PositionAndStatus.qml  PositionBox.qml  RssiView.qml  SatelliteView.qml  SettingsView.qml  SkyView.qml  Theme.qml  ViewSwitch.qml  main.cpp  qmldir  satelliteinfo.pro  satelliteinfo.qml  satellitemodel.cpp  satellitemodel.h  sortfiltermodel.cpp  sortfiltermodel.h
examples/positioning/satelliteinfo/doc/src/: satelliteinfo.qdoc
examples/positioning/satelliteinfo/icons/: qt_attribution.json
examples/positioning/weatherinfo/: CMakeLists.txt  WeatherInfo.qml  appmodel.cpp  appmodel.h  main.cpp  openweathermapbackend.cpp  providerbackend.h  weatherapibackend.cpp  weatherinfo.pro  weatherinfo.qml
src/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/position/: CMakeLists.txt
src/plugins/position/android/: CMakeLists.txt
src/plugins/position/android/jar/: CMakeLists.txt
src/plugins/position/android/jar/src/org/qtproject/qt/android/positioning/: QtPositioning.java
src/plugins/position/android/src/: CMakeLists.txt  jnipositioning.cpp  jnipositioning.h  positionfactory_android.cpp  positionfactory_android.h  qgeopositioninfosource_android.cpp  qgeopositioninfosource_android_p.h  qgeosatelliteinfosource_android.cpp  qgeosatelliteinfosource_android_p.h
src/plugins/position/corelocation/: CMakeLists.txt  qgeopositioninfosource_cl.mm  qgeopositioninfosource_cl_p.h  qgeopositioninfosourcefactory_cl.h  qgeopositioninfosourcefactory_cl.mm
src/plugins/position/geoclue2/: CMakeLists.txt  geocluetypes.cpp  geocluetypes.h  qgeopositioninfosource_geoclue2.cpp  qgeopositioninfosource_geoclue2_p.h  qgeopositioninfosourcefactory_geoclue2.cpp  qgeopositioninfosourcefactory_geoclue2.h
src/plugins/position/gypsy/: CMakeLists.txt  qgeopositioninfosourcefactory_gypsy.cpp  qgeopositioninfosourcefactory_gypsy.h  qgeosatelliteinfosource_gypsy.cpp  qgeosatelliteinfosource_gypsy_p.h
src/plugins/position/nmea/: CMakeLists.txt  plugin.json  qgeopositioninfosourcefactory_nmea.cpp  qgeopositioninfosourcefactory_nmea.h  qiopipe.cpp  qiopipe_p.h
src/plugins/position/positionpoll/: CMakeLists.txt  positionpollfactory.cpp  positionpollfactory.h  qgeoareamonitor_polling.cpp  qgeoareamonitor_polling.h
src/plugins/position/winrt/: CMakeLists.txt  qgeopositioninfosource_winrt.cpp  qgeopositioninfosource_winrt_p.h  qgeopositioninfosourcefactory_winrt.cpp  qgeopositioninfosourcefactory_winrt.h
src/positioning/: CMakeLists.txt  configure.cmake  qclipperutils.cpp  qclipperutils_p.h  qdoublematrix4x4.cpp  qdoublematrix4x4_p.h  qdoublevector2d.cpp  qdoublevector2d_p.h  qdoublevector3d.cpp  qdoublevector3d_p.h  qgeoaddress.cpp  qgeoaddress.h  qgeoaddress_p.h  qgeoareamonitorinfo.cpp  qgeoareamonitorinfo.h  qgeoareamonitorsource.cpp  qgeoareamonitorsource.h  qgeocircle.cpp  qgeocircle.h  qgeocircle_p.h  qgeocoordinate.cpp  qgeocoordinate.h  qgeocoordinate_p.h  qgeocoordinateobject.cpp  qgeocoordinateobject_p.h  qgeolocation.cpp  qgeolocation.h  qgeolocation_p.h  qgeopath.cpp  qgeopath.h  qgeopath_p.h  qgeopolygon.cpp  qgeopolygon.h  qgeopolygon_p.h  qgeopositioninfo.cpp  qgeopositioninfo.h  qgeopositioninfo_p.h  qgeopositioninfosource.cpp  qgeopositioninfosource.h  qgeopositioninfosource_p.h  (+26 more)
src/positioning/doc/: qtpositioning.qdocconf
src/positioning/doc/snippets/cpp/: CMakeLists.txt
src/positioning/doc/src/: cpp-position.qdoc  external-resources.qdoc  qml-position.qdoc  qtpositioning-examples.qdoc  qtpositioning-plugins.qdoc  qtpositioning-qml.qdoc  qtpositioning-toc.qdoc  qtpositioning.qdoc
src/positioning/doc/src/plugins/: android.qdoc  corelocation.qdoc  geoclue2.qdoc  gypsy.qdoc  nmea.qdoc
src/positioningquick/: CMakeLists.txt  geosatelliteinfo.qdoc  locationsingleton.cpp  locationsingleton_p.h  positioningplugin.cpp  qdeclarativegeoaddress.cpp  qdeclarativegeoaddress_p.h  qdeclarativegeolocation.cpp  qdeclarativegeolocation_p.h  qdeclarativepluginparameter.cpp  qdeclarativepluginparameter_p.h  qdeclarativeposition.cpp  qdeclarativeposition_p.h  qdeclarativepositionsource.cpp  qdeclarativepositionsource_p.h  qdeclarativesatellitesource.cpp  qdeclarativesatellitesource_p.h  qpositioningquickglobal.h  qpositioningquickglobal_p.h  qpositioningquickmodule.cpp  qpositioningquickmodule_p.h  qquickgeocoordinateanimation.cpp  qquickgeocoordinateanimation_p.h  qquickgeocoordinateanimation_p_p.h
tests/applications/positioning_backend/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/cmake/: CMakeLists.txt
tests/auto/declarative_geolocation/: CMakeLists.txt
tests/auto/declarative_positioning_core/: CMakeLists.txt  properties.cpp  properties.h  tst_geoshape.qml
tests/auto/declarative_satellitesource/: CMakeLists.txt  tst_satellitesource.qml
tests/auto/doublevectors/: CMakeLists.txt
tests/auto/dummypositionplugin/: CMakeLists.txt  plugin.cpp
tests/auto/positionplugin/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt
(+57 files in other folders)
